# cortext

./: .gitignore  README.md  install.sh  patch_tribe.py  run.sh  score.py  serve.sh  server.py
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/scripts/: make_icon.py  sync-resources.sh  test_brainmap.py
desktop/src/: setup.css  setup.html  setup.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/resources/payload/: bootstrap.sh  config.default.json
desktop/src-tauri/src/: main.rs
docs/: api.md
mcp/: README.md  tribe_mcp.py
tools/: calibrate.py
web/: index.html
