[package]
name = "tribe-scorer-desktop"
version = "0.1.4"
description = "TRIBE Scorer desktop app"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 16
lto = "thin"
opt-level = "s"
strip = true
